# ScratchProject

./: .gitignore  CMakeLists.txt  ScratchProject.sln  ScratchProject.vcxproj  ScratchProject.vcxproj.filters  asset_manager.cpp  asset_manager.h  game.cpp  game.h  lua_bootstrap.cpp  lua_bootstrap.h  lua_data.cpp  lua_data.h  main.cpp  prototype.h  texture_d.h
assets/prototypes/: prototypes.lua  textures.lua
